Added time and date for make listing and edit listing

--- a/templates/components/listing-card.html
+++ b/templates/components/listing-card.html
@@ -25,7 +25,7 @@
 {% else %}
     <div class='section'>
         <h1>Oh No!</h1>
-        <p>There isn't any Favourites. GO OUTSIDE AND GET A LIFE</p>
+        <p>There isn't any Favourites :(</p>
     </div>
 
 {% endif %}
