--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -302,13 +302,11 @@
                 <div class='field'>
                     <div class='control'>
                         {{ form.tour_days(name='tour_days', type='checkbox', class='checkbox') }}
-                        <!-- <input type="checkbox" class='checkbox' name="tour_days" value="Mon" validate="required:true, minlength:1"/> Monday<br>
-                        <input type="checkbox" class='checkbox' name="tour_days" value="Tues"/> Tuesday<br>
-                        <input type="checkbox" class='checkbox' name="avail_day" value="Wed"/> Wednesday<br>
-                        <input type="checkbox" class='checkbox' name="avail_day" value="Thurs"/> Thursday<br>
-                        <input type="checkbox" class='checkbox' name="avail_day" value="Fri"/> Friday<br>
-                        <input type="checkbox" class='checkbox' name="avail_day" value="Sat"/> Saturday<br>
-                        <input type="checkbox" class='checkbox' name="avail_day" value="Sun"/> Sunday<br> -->
+                        <ul>
+                            {% for error in form.tour_days.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
                     </div>
                 </div>
 
@@ -324,6 +322,7 @@
                 <div class='field'>
                     <div class='control level-left'>
                         {{ form.tour_start_time(id='tour-start-time', class='dropdown-item level-item') }} <p class='level-item'>-</p>  {{ form.tour_end_time(id='tour-end-time', class='dropdown-item level-item') }}
+                        <br>
                         <ul>
                             {% for error in form.tour_end_time.errors %}
                             <li class="has-text-danger"> {{ error }}</li>
