--- a/templates/success-user.html
+++ b/templates/success-user.html
@@ -9,7 +9,7 @@
     <section class="section mt-5">
         <div class="container">
             <div class='content has-text-centered'>
-                <h1>Successfully Updated Account!</h1>
+                <h1>Account Successfully Updated!</h1>
                 <br>
                 <a class='button is-light' href="/me/settings">
                     View Account
