--- a/templates/setting.html
+++ b/templates/setting.html
@@ -144,9 +144,9 @@
     <div class="modal" id="ChangePasswordModal">
         <div class="modal-background"></div>
         <div class="modal-content">
-            <div class="box has-text-centered">
-                <p class="is-size-5 has-text-weight-bold">Update Password?</p>
-                <p>Feel free to change your password anytime.</p>
+            <div class="box">
+                <p class="is-size-5 has-text-weight-bold has-text-centered">Update Password?</p>
+                <p class="has-text-centered">Feel free to change your password anytime.</p>
                 <form class="form-horizontal" action="/me/settings" method="POST">
                     {{ form1.csrf_token }}
                     <div class="field">
@@ -182,7 +182,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="field is-grouped is-grouped-centered mt-5">
+                    <div class="field is-grouped is-grouped-centered mt-5 has-text-centered">
                         <div class="control">
                             <button class="button is-danger is-light" onclick="$('#ChangePasswordModal').fadeOut('fast');">
                                 Cancel
