Made slight changes to shop code

--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -398,8 +398,8 @@
                 </div>
 
 
-                <label class="label" for="tour-revs" has-tooltip-right data-tooltip="U cant touch this">Maximum Tour
-                    Revisions</label>
+                <label class="label" for="tour-revs">Maximum Tour
+                    Revisions &nbsp<span class='has-tooltip-right has-tooltip-arrow' data-tooltip='Maximum number of times a customer may ammend the itinerary for free'><i class="fas fa-question-circle"></i></span></label>
                 <div class="field">
                     <div class="control">
                         {{ form.tour_revisions(id="tour-revs", type="number", class="input", placeholder="3") }}
