Added random listing function

--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -74,6 +74,8 @@
                             {% else %}
                             <a class="button has-text-link" href='/listings/show/{{ item["_id"] }}'><i
                                 class="fas fa-clipboard"></i>&ensp;Show Listing</a>
+                            
+                            <p class='has-text-danger is-italic'>Listing is currently hidden!</p>
                             {% endif %}
 
 
