--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="control">
-                        <button class="button is-danger">
+                        <button class="button is-danger" onclick="location.href='/discover/random'">
                             <i class="fas fa-dice"></i>
                         </button>
                     </div>
