--- a/templates/setting.html
+++ b/templates/setting.html
@@ -36,7 +36,7 @@
                 <div class="section">
                     <!-- Update account settings -->
                     <h1 class="is-size-4 has-text-left has-text-weight-bold">Account Details</h1>
-                    <form class="form-horizontal" action="/me/settings" method="POST">
+                    <form class="form-horizontal" action="/me/settings" method="POST" enctype="multipart/form-data">
                         {{ form.csrf_token }}
                         <fieldset>
                             <div class="field">
@@ -62,6 +62,23 @@
                                 </div>
                             </div>
 
+                            <div class="field">
+                                <div class="file has-name is-boxed">
+                                    <label class="file-label">Profile Image:</label>
+                                    {{ form.pfp_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-pfp-img').innerHTML = this.files[0].name;") }}
+                                    <span class="file-cta">
+                                <span class="file-icon">
+                                    <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                    Upload an Image...
+                                </span>
+                            </span>
+                                    <span class="file-name" id='filename-pfp-img'>
+                            </span>
+                                    </label>
+                                </div>
+                            </div>
                             <div class="field">
                                 <label class="label" for="password">Password:
                                     <span class="tag is-warning is-light is-size-5 is-clickable" onclick="$('#ChangePasswordModal').fadeIn('fast')">
