--- a/templates/setting.html
+++ b/templates/setting.html
@@ -62,11 +62,14 @@
                                 </div>
                             </div>
 
-                            <div class="field">
+                            <div class='field'>
+                                <label class="label" for="name">Profile Image: </label>
                                 <div class="file has-name is-boxed">
-                                    <label class="file-label">Profile Image:</label>
-                                    {{ form.pfp_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-pfp-img').innerHTML = this.files[0].name;") }}
-                                    <span class="file-cta">
+                                    <label class="file-label">
+                                        {{ form.profile_img(class="file-input", id='uploadImg', type="file", onchange="if
+                            (this.files.length > 0) document.getElementById('filename-profile-img').innerHTML =
+                            this.files[0].name;") }}
+                                        <span class="file-cta">
                                 <span class="file-icon">
                                     <i class="fas fa-upload"></i>
                                 </span>
@@ -74,11 +77,20 @@
                                     Upload an Image...
                                 </span>
                             </span>
-                                    <span class="file-name" id='filename-pfp-img'>
+                                        <span class="file-name" id='filename-profile-img'>
                             </span>
                                     </label>
                                 </div>
                             </div>
+
+                            {% for error in form.profile_img.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+
+                            <div>
+                                <img id="currentImg"/>
+                            </div>
+
                             <div class="field">
                                 <label class="label" for="password">Password:
                                     <span class="tag is-warning is-light is-size-5 is-clickable" onclick="$('#ChangePasswordModal').fadeIn('fast')">
