--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="level-item">
                                 <div class="">
-                                    <div class="heading">Overrall rate</div>
+                                    <div class="heading">Overall rate</div>
                                     <div class="title is-5">78.6%</div>
                                 </div>
                             </div>
