--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,15 +9,30 @@
 
 
 {% block content %}
-    <div class="columns">
+    <div class="columns" id="profile">
         <!-- Side Profile Page -->
         <div class="column is-one-quarter mt-6">
             <div class="section">
                 <div class="box is-centered">
-
+                    <div class="dropdown post-options is-hoverable is-right is-pulled-right">
+                        <div class="dropdown-trigger">
+                            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-post">
+                        <span class="icon is-small">
+                            <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+                        </span>
+                            </button>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
+                            <div class="dropdown-content">
+                                <a href="{{ url_for('support') }}" class="dropdown-item" onclick="report">
+                                    Report Abuse
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="profile-img-onprofile" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                     <br>
-                    <p class="title is-5 is-spaced">{{ user.name }}</p>
+                    <p class="title is-5 is-spaced has-text-centered">{{ user.name }}</p>
                     <form class="form-horizontal" action="/users/{{ user._id }}" method="POST">
                         {{ form.csrf_token }}
                         <fieldset>
@@ -29,7 +44,7 @@
                                     </div>
                                 {% endif %}
                                 <div class="control">
-                                    {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio, style="height:160px;") }}
+                                    {{ form.bio(id="bio", type="textarea", class="input", rows="5", style="height:160px;") }}
                                     <ul>
                                         {% for error in form.bio.errors %}
                                             <li class="has-text-danger"> {{ error }}</li>
@@ -38,7 +53,7 @@
                                 </div>
                             </div>
                             {% if editable %}
-                                <div class="field is-small">
+                                <div class="field is-small has-text-right">
                                     <label class="label" for="bio-submit"></label>
                                     <div class="control">
                                         <input type='submit' value='Save' id="bio-submit" name="bio-submit"
@@ -49,9 +64,9 @@
 
                         </fieldset>
                     </form>
-                {% if user.verified == 1 %}
-                    <span class="tag is-success">Verified</span>
-                {% endif %}
+                    {% if user.verified == 1 %}
+                        <span class="tag is-success">Verified</span>
+                    {% endif %}
                 </div>
             </div>
 
@@ -178,4 +193,8 @@
         </div>
 
     </div>
+    <script>
+        var pfplink = window.location.href;
+        sessionStorage.setItem("pfpLink", pfplink);
+    </script>
 {% endblock %}
