--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -37,32 +37,32 @@
                         </div>
                     </div>
 
-                    <form>
-                    <form id='review_form' method="POST" action="{{ url_for('review', book_id=book_id) }}">
+                    
+                    <form id='review_form' method="POST" action="{{ url_for('review', book_id=booking['_id']) }}">
                         {{ form.csrf_token }}
                         <fieldset>
                             <div class="field has-text-centered">
-                                <div class="star"></div>
-                                {{ form.rating(id ='result') }}
+                                <!-- <div class="star"></div> -->
+                                {{ form.rating(id ='result', class='star') }}
                             </div>
 
                             <div class="field">
                                 <label class="label" for="review">Leave a review</label>
                                 <div class="control">
-                                    {{ form.review_text(placeholder="What were some things you enjoyed about this experience? How can it be improved?"
-                                    id="review" name="review") }}
-                                    <textarea class="textarea"
+                                    {{ form.review_text(placeholder="What were some things you enjoyed about this experience? How can it be improved?",
+                                    id="review", class="textarea") }}
+                                    <!-- <textarea class="textarea"
                                               placeholder="What were some things you enjoyed about this experience? How can it be improved?"
-                                              id="review" name="review"></textarea>
+                                              id="review" name="review"></textarea> -->
                                 </div>
                             </div>
 
                             <div class="field">
                                 <label class="label" for="review-submit"></label>
                                 <div class="control">
-                                    <button id="review-submit" name="review-submit" type="submit"
+                                    <input id="review-submit" name="review-submit" type="submit"
                                             class="button is-success is-medium is-fullwidth">Submit your review
-                                    </button>
+                                </input>
                                 </div>
                             </div>
                         </fieldset>
