Halfway with update password

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
                             <div class="dropdown-content">
-                                <a href="{{ url_for('support') }}" class="dropdown-item" onclick="report">
+                                <a href="{{ url_for('support') }}" class="dropdown-item">
                                     Report Abuse
                                 </a>
                             </div>
