--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -6,66 +6,59 @@
 {% endblock %}
 
 {% block content %}
-    <div class="modal is-active is-clipped" id="ChangePasswordModal">
-        <div class="modal-background"></div>
-        <div class="modal-content">
-            <div class="box">
-                <p class="is-size-5 has-text-weight-bold has-text-centered">Update Password?</p>
-                <p class="has-text-centered">Feel free to change your password anytime.</p>
-                <form class="form-horizontal" action="/me/settings" method="POST">
-                    {{ form1.csrf_token }}
-                    <div class="field">
-                        <label class="label" for="old_password">Current Password:</label>
-                        <div class="control">
-                            {{ form1.old_password(id="old_password", type="text", class="input") }}
-                            <ul>
-                                {% for error in form1.old_password.errors %}
-                                    <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label class="label" for="password">New Password:</label>
-                        <div class="control">
-                            {{ form1.password(id="password", type="text", class="input") }}
-                            <ul>
-                                {% for error in form1.password.errors %}
-                                    <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label class="label" for="confirm">Confirm New Password:</label>
-                        <div class="control">
-                            {{ form1.confirm(id="confirm", type="text", class="input") }}
-                            <ul>
-                                {% for error in form1.confirm.errors %}
-                                    <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="field is-grouped is-grouped-centered mt-5 has-text-centered">
-                        <div class="control">
-                            <button class="button is-danger is-light">
-                                Cancel
-                            </button>
-                        </div>
-                        <form id="ChangePassword" method="POST">
-                            <div class="control">
-                                <button class="button is-success is-light" type="submit" name="ChangePasswordComplete" value="UpdatePassword">
-                                    Change Password
-                                </button>
-                            </div>
-                        </form>
+    <div class="box">
+        <p class="is-size-5 has-text-weight-bold has-text-centered">Update Password?</p>
+        <p class="has-text-centered">Feel free to change your password anytime.</p>
+        <form class="form-horizontal" action="/me/settings" method="POST">
+            {{ form1.csrf_token }}
+            <div class="field">
+                <label class="label" for="old_password">Current Password:</label>
+                <div class="control">
+                    {{ form.old_password(id="old_password", type="text", class="input") }}
+                    <ul>
+                        {% for error in form.old_password.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label" for="password">New Password:</label>
+                <div class="control">
+                    {{ form.password(id="password", type="text", class="input") }}
+                    <ul>
+                        {% for error in form.password.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label" for="confirm">Confirm New Password:</label>
+                <div class="control">
+                    {{ form.confirm(id="confirm", type="text", class="input") }}
+                    <ul>
+                        {% for error in form.confirm.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="field is-grouped is-grouped-centered mt-5 has-text-centered">
+                <div class="control">
+                    <button class="button is-danger is-light">
+                        Cancel
+                    </button>
+                </div>
+                <form id="ChangePassword" method="POST">
+                    <div class="control">
+                        <button class="button is-success is-light" type="submit" name="ChangePasswordComplete" value="UpdatePassword">
+                            Change Password
+                        </button>
                     </div>
                 </form>
-
             </div>
-        </div>
-        <button class="modal-close is-large" aria-label="close"></button>
+        </form>
     </div>
 {% endblock %}
 
